# msglogger

./: .gitignore  CMakeLists.txt  README.md
include/: msglogger.h
src/: msglogger.c
